# vista-schedule-mirror

./: .env  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.lovable/: plan.md
.lovable/mcp/: manifest.json
public/: llms.txt  robots.txt  sitemap.xml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/contexts/: AICoachContext.tsx  AuthContext.tsx  MacroNewsContext.tsx  PageVisibilityContext.tsx  RealtimeSyncContext.tsx  TradingContext.tsx
src/hooks/: useAutosave.ts  useMacroNews.ts  useOnlineStatus.ts  useUrlPreview.ts  useUserPreferences.ts
src/lib/: aiInsightAdapters.ts  aiReview.ts  bias.ts  calculations.ts  dbMappers.ts  desktop.ts  draftStorage.ts  insightEngine.ts  journalData.ts  journalUpload.ts  mediaSlot.ts  mediaTypes.ts  mediaUrl.ts  noBase64Guard.ts  researchAnalytics.ts  researchStorage.ts  sampleData.ts  userStorage.ts
src/pages/: AICoach.tsx  AIInsights.tsx  AIWorkspace.tsx  Accounts.tsx  Analytics.tsx  BacktestingLab.tsx  BehaviorPatterns.tsx  BiasAnalytics.tsx  CalendarPage.tsx  ChatGPTAssistant.tsx  ControlCenter.tsx  DailyChecklist.tsx  DailyPlan.tsx  Dashboard.tsx  Login.tsx  MacroIntelligence.tsx  MacroNews.tsx  Mistakes.tsx  Notebook.tsx  OAuthConsent.tsx  Psychology.tsx  ResearchAnalytics.tsx  ResearchLab.tsx  ResearchStrategy.tsx  ResearchTest.tsx  Settings.tsx  SetupPlaybook.tsx  SystemAnalytics.tsx  ToolPanel.tsx  TradeQuality.tsx  (+5 more)
supabase/: config.toml
(+128 files in other folders)
